force-app/main/default/objects/Contact/fields/Agency_Letter_on_File__c.field-meta.xml
<CustomField>
    <fullName>Agency_Letter_on_File__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if checked, it indicates if the researcher has a Permission letter from the Agency on file.</description>
    <label>Agency Letter on File</label>
    <type>Checkbox</type>
</CustomField>