force-app/main/default/objects/Contact/fields/Customer_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sub_Category__c</fullName>
    <formula>Text( Account.ETMS_Customer_Sub_Category__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Sub-Category</label>
    <type>Text</type>
</CustomField>