force-app/main/default/objects/Contact/fields/ECT_Active__c.field-meta.xml
<CustomField>
    <fullName>ECT_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>