force-app/main/default/objects/Contact/fields/ECT_Alternate_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>ECT_Alternate_Phone_Number__c</fullName>
    <label>Alternate Phone Number</label>
    <type>Phone</type>
</CustomField>