force-app/main/default/objects/Contact/fields/ECT_CEO_Website__c.field-meta.xml
<CustomField>
    <fullName>ECT_CEO_Website__c</fullName>
    <label>CEO Website</label>
    <type>Url</type>
</CustomField>