force-app/main/default/objects/Contact/fields/ECT_Contact_s_State__c.field-meta.xml
<CustomField>
    <fullName>ECT_Contact_s_State__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact&apos;s State</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ECT_State__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ECT_State__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>