force-app/main/default/objects/Contact/fields/ECT_Contact_s_State_Name__c.field-meta.xml
<CustomField>
    <fullName>ECT_Contact_s_State_Name__c</fullName>
    <formula>ECT_Contact_s_State__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact&apos;s State Name</label>
    <type>Text</type>
</CustomField>