force-app/main/default/objects/Contact/fields/ECT_Location__c.field-meta.xml
<CustomField>
    <fullName>ECT_Location__c</fullName>
    <label>Location</label>
    <length>60</length>
    <type>Text</type>
</CustomField>