force-app/main/default/objects/Contact/fields/ECT_Preferred_Honorific__c.field-meta.xml
<CustomField>
    <fullName>ECT_Preferred_Honorific__c</fullName>
    <label>Preferred Honorific</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Governor</fullName>
            </value>
            <value>
                <fullName>Mayor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>