force-app/main/default/objects/Contact/fields/ECT_Primary_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>ECT_Primary_Phone_Number__c</fullName>
    <label>Primary Phone Number</label>
    <type>Phone</type>
</CustomField>