force-app/main/default/objects/Contact/fields/ECT_Role__c.field-meta.xml
<CustomField>
    <fullName>ECT_Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CEO POC</fullName>
            </value>
            <value>
                <fullName>Chief Executive Officer (CEO)</fullName>
            </value>
            <value>
                <fullName>Congress</fullName>
            </value>
            <value>
                <fullName>Electoral College Alternate POC</fullName>
            </value>
            <value>
                <fullName>Electoral College Primary POC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>