force-app/main/default/objects/Contact/fields/ID_Issued_By__c.field-meta.xml
<CustomField>
    <fullName>ID_Issued_By__c</fullName>
    <label>ID Issued By:</label>
    <length>20</length>
    <type>Text</type>
</CustomField>