force-app/main/default/objects/Contact/fields/ID_Type__c.field-meta.xml
<CustomField>
    <fullName>ID_Type__c</fullName>
    <label>ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Driver License</fullName>
            </value>
            <value>
                <fullName>Green Card / Visa</fullName>
            </value>
            <value>
                <fullName>Military Card (CAC)</fullName>
            </value>
            <value>
                <fullName>Passport / Passport Card</fullName>
            </value>
            <value>
                <fullName>School ID</fullName>
            </value>
            <value>
                <fullName>Government ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>