force-app/main/default/objects/Contact/fields/Inmate_Number__c.field-meta.xml
<CustomField>
    <fullName>Inmate_Number__c</fullName>
    <label>Inmate Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>