force-app/main/default/objects/Contact/fields/Open_Pull_Requests__c.field-meta.xml
<CustomField>
    <fullName>Open_Pull_Requests__c</fullName>
    <label>Open Pull Requests</label>
    <summaryFilterItems>
        <field>PULLDB_Pull__c.PullDB_Status__c</field>
        <operation>equals</operation>
        <value>Pull Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>PULLDB_Pull__c.Contact_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>