force-app/main/default/objects/Contact/fields/RM_Hold__c.field-meta.xml
<CustomField>
    <fullName>RM_Hold__c</fullName>
    <formula>RRS_Record_Retention__r.RM_Hold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RM Hold</label>
    <type>Checkbox</type>
</CustomField>