force-app/main/default/objects/Contact/fields/RRS_Access__c.field-meta.xml
<CustomField>
    <fullName>RRS_Access__c</fullName>
    <formula>IF(
 RRS_Grant_Access__c = TRUE, 
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 35, 1050),IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 35, 1050)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Access Status</label>
    <type>Text</type>
</CustomField>