force-app/main/default/objects/Contact/fields/RRS_Access_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>RRS_Access_Expiration_Date__c</fullName>
    <label>Access Expiration Date</label>
    <type>Date</type>
</CustomField>