force-app/main/default/objects/Contact/fields/RRS_Access_Log__c.field-meta.xml
<CustomField>
    <fullName>RRS_Access_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Access Log</label>
    <referenceTo>RRS_Access_Log__c</referenceTo>
    <relationshipLabel>Related Access Logs</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>