force-app/main/default/objects/Contact/fields/RRS_Access_Status_Color_Bar__c.field-meta.xml
<CustomField>
    <fullName>RRS_Access_Status_Color_Bar__c</fullName>
    <formula>IF(
RRS_Grant_Access__c = TRUE,&quot;GREEN&quot;,&quot;YELLOW&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Access Status Color</label>
    <type>Text</type>
</CustomField>