force-app/main/default/objects/Contact/fields/RRS_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>RRS_Affiliation__c</fullName>
    <label>Affiliation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>