force-app/main/default/objects/Contact/fields/RRS_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>RRS_Contact_Type__c</fullName>
    <description>to identify the type of contacts</description>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Researcher</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>