force-app/main/default/objects/Contact/fields/RRS_Description_of_Proposed_Research__c.field-meta.xml
<CustomField>
    <fullName>RRS_Description_of_Proposed_Research__c</fullName>
    <label>Description of Proposed Research</label>
    <length>255</length>
    <type>Text</type>
</CustomField>