force-app/main/default/objects/Contact/fields/RRS_End_Date__c.field-meta.xml
<CustomField>
    <fullName>RRS_End_Date__c</fullName>
    <description>Logs suspension, banned and expired end date.</description>
    <label>End Date (Restricted Access)</label>
    <type>Date</type>
</CustomField>