force-app/main/default/objects/Contact/fields/RRS_Expected_Result_of_Research__c.field-meta.xml
<CustomField>
    <fullName>RRS_Expected_Result_of_Research__c</fullName>
    <label>Expected Result of Research</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family History</fullName>
            </value>
            <value>
                <fullName>Course Paper</fullName>
            </value>
            <value>
                <fullName>Senior or Masters Thesis</fullName>
            </value>
            <value>
                <fullName>PhD Dissertation</fullName>
            </value>
            <value>
                <fullName>Article</fullName>
            </value>
            <value>
                <fullName>Book</fullName>
            </value>
            <value>
                <fullName>Film/TV</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>