force-app/main/default/objects/Contact/fields/RRS_Grant_Access__c.field-meta.xml
<CustomField>
    <fullName>RRS_Grant_Access__c</fullName>
    <formula>IF (ISPICKVAL( RRS_Status__c, &quot;Active&quot;), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Access</label>
    <type>Checkbox</type>
</CustomField>