force-app/main/default/objects/Contact/fields/RRS_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>RRS_Group_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Name</label>
    <referenceTo>RRS_Researcher_Group__c</referenceTo>
    <relationshipLabel>Group Members</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>