force-app/main/default/objects/Contact/fields/RRS_I_Agree__c.field-meta.xml
<CustomField>
    <fullName>RRS_I_Agree__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I have read 36 CFR Part 1254 (Regulations for the public use of records in the National Archives and Records Administration) and I will comply with those regulations.</inlineHelpText>
    <label>I Agree</label>
    <type>Checkbox</type>
</CustomField>