force-app/main/default/objects/Contact/fields/RRS_I_Completed_Orientation__c.field-meta.xml
<CustomField>
    <fullName>RRS_I_Completed_Orientation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I Completed Orientation</label>
    <type>Checkbox</type>
</CustomField>