force-app/main/default/objects/Contact/fields/RRS_Incident_Location__c.field-meta.xml
<CustomField>
    <fullName>RRS_Incident_Location__c</fullName>
    <description>Location of the Incident that caused the Researcher to be banned(Temporarily/Permanently).</description>
    <label>Incident Location</label>
    <length>200</length>
    <type>Text</type>
</CustomField>