force-app/main/default/objects/Contact/fields/RRS_Name_Address_of_EmployerInstitution__c.field-meta.xml
<CustomField>
    <fullName>RRS_Name_Address_of_EmployerInstitution__c</fullName>
    <label>Name &amp; Address of Employer/Institution</label>
    <type>TextArea</type>
</CustomField>