force-app/main/default/objects/Contact/fields/RRS_Name_of_Instructor__c.field-meta.xml
<CustomField>
    <fullName>RRS_Name_of_Instructor__c</fullName>
    <label>Name of Instructor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>