force-app/main/default/objects/Contact/fields/RRS_Occupation__c.field-meta.xml
<CustomField>
    <fullName>RRS_Occupation__c</fullName>
    <label>Occupation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>