force-app/main/default/objects/Contact/fields/RRS_Orientation_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>RRS_Orientation_Completion_Date__c</fullName>
    <label>Orientation Completion Date</label>
    <type>Date</type>
</CustomField>