force-app/main/default/objects/Contact/fields/RRS_Passport_ID_Drivers_License_ID__c.field-meta.xml
<CustomField>
    <fullName>RRS_Passport_ID_Drivers_License_ID__c</fullName>
    <label>Passport ID / Drivers License ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>