force-app/main/default/objects/Contact/fields/RRS_Picture__c.field-meta.xml
<CustomField>
    <fullName>RRS_Picture__c</fullName>
    <formula>IMAGE(RRS_Picture_Path__c, &quot;Contact Image&quot;, 264, 320)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Picture</label>
    <type>Text</type>
</CustomField>