force-app/main/default/objects/Contact/fields/RRS_Picture_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>RRS_Picture_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>whether Picture was uploaded or taken with webcam.</description>
    <label>Picture Uploaded</label>
    <type>Checkbox</type>
</CustomField>