force-app/main/default/objects/Contact/fields/RRS_Reason_For_Ban__c.field-meta.xml
<CustomField>
    <fullName>RRS_Reason_For_Ban__c</fullName>
    <label>Reason For Ban</label>
    <length>255</length>
    <type>Text</type>
</CustomField>