force-app/main/default/objects/Contact/fields/RRS_Reason_For_Suspension__c.field-meta.xml
<CustomField>
    <fullName>RRS_Reason_For_Suspension__c</fullName>
    <label>Reason For Suspension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>