force-app/main/default/objects/Contact/fields/RRS_Record_Retention__c.field-meta.xml
<CustomField>
    <fullName>RRS_Record_Retention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Record Retention</label>
    <referenceTo>GC_Record_Retention__c</referenceTo>
    <relationshipLabel>Related Contact Records</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>