force-app/main/default/objects/Contact/fields/RRS_Registration_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>RRS_Registration_Application_Type__c</fullName>
    <label>Registration Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Researcher</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>