force-app/main/default/objects/Contact/fields/RRS_Researcher_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>RRS_Researcher_ID_Number__c</fullName>
    <displayFormat>{0000000}</displayFormat>
    <label>Researcher ID Number</label>
    <type>AutoNumber</type>
</CustomField>