force-app/main/default/objects/Contact/fields/RRS_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>RRS_Start_Date__c</fullName>
    <description>Logs suspension, banned and expire start date.</description>
    <label>Start Date (Restricted Access)</label>
    <type>Date</type>
</CustomField>