force-app/main/default/objects/Contact/fields/RRS_Status__c.field-meta.xml
<CustomField>
    <fullName>RRS_Status__c</fullName>
    <label>Researcher Access Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Banned</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>