force-app/main/default/objects/Contact/fields/RRS_Temporary_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>RRS_Temporary_Card_Number__c</fullName>
    <description>Temporary card number for researcher.</description>
    <label>Temporary Card Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>