force-app/main/default/objects/Contact/fields/RRS_Tentative_Title__c.field-meta.xml
<CustomField>
    <fullName>RRS_Tentative_Title__c</fullName>
    <label>Tentative Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>