force-app/main/default/objects/Contact/fields/RRS_Type_of_Application__c.field-meta.xml
<CustomField>
    <fullName>RRS_Type_of_Application__c</fullName>
    <label>Type of Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>