force-app/main/default/objects/Contact/fields/RRS_Type_of_Researcher__c.field-meta.xml
<CustomField>
    <fullName>RRS_Type_of_Researcher__c</fullName>
    <label>Type of Researcher</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Genealogist</fullName>
            </value>
            <value>
                <fullName>Scholar/Academic</fullName>
            </value>
            <value>
                <fullName>Journalist/Media</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>