force-app/main/default/objects/Contact/recordTypes/ECT_Contact.recordType-meta.xml
<RecordType>
    <fullName>ECT_Contact</fullName>
    <active>true</active>
    <description>Record Type to hold ECT contact information</description>
    <label>ECT Contact</label>
</RecordType>