force-app/main/default/objects/Contact/recordTypes/ETMS_Contact.recordType-meta.xml
<RecordType>
    <fullName>ETMS_Contact</fullName>
    <active>true</active>
    <description>Record Type to hold ETMS contact information</description>
    <label>ETMS Contact</label>
</RecordType>