force-app/main/default/objects/Contact/recordTypes/Nara_Employee.recordType-meta.xml
<RecordType>
    <fullName>Nara_Employee</fullName>
    <active>true</active>
    <description>Record Type to hold NARA employee information</description>
    <label>Nara Employee</label>
</RecordType>