force-app/main/default/objects/Contact/recordTypes/OGIS_Contact.recordType-meta.xml
<RecordType>
    <fullName>OGIS_Contact</fullName>
    <active>true</active>
    <description>Record type to hold OGIS Contact information</description>
    <label>OGIS Contact</label>
</RecordType>