force-app/main/default/objects/Contact/recordTypes/Researcher_Contact.recordType-meta.xml
<RecordType>
    <fullName>Researcher_Contact</fullName>
    <active>true</active>
    <description>Record Type to hold researcher contact information</description>
    <label>Researcher Contact</label>
</RecordType>