force-app/main/default/objects/Contact/recordTypes/Security_Personnel.recordType-meta.xml
<RecordType>
    <fullName>Security_Personnel</fullName>
    <active>true</active>
    <description>Record type to hold security guard information</description>
    <label>Security Personnel</label>
</RecordType>