force-app/main/default/objects/Contact/validationRules/Check_I_Completed_Orientation_box.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_I_Completed_Orientation_box</fullName>
    <active>true</active>
    <description>check the I Agree checkbox before saving record</description>
    <errorConditionFormula>AND
(
RRS_I_Completed_Orientation__c = False,
RecordType.Name = &apos;Researcher Contact&apos;,
(ISPICKVAL(  RRS_Status__c ,&quot;Active&quot;))
)</errorConditionFormula>
    <errorDisplayField>RRS_I_Agree__c</errorDisplayField>
    <errorMessage>Please ensure that the checkbox is checked.</errorMessage>
</ValidationRule>