force-app/main/default/objects/Contact/validationRules/ECT_Address_Required_if_Contact_is_CEO.validationRule-meta.xml
<ValidationRule>
    <fullName>ECT_Address_Required_if_Contact_is_CEO</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL( ECT_Role__c , &quot;Chief Executive Officer (CEO)&quot;) , OR(
   ISBLANK( MailingStreet ),
   ISBLANK( MailingCity ),
   ISBLANK( MailingState ),
   ISBLANK( MailingPostalCode )
))</errorConditionFormula>
    <errorMessage>Address is required if Role is &quot;Chief Executive Officer (CEO)&quot;</errorMessage>
</ValidationRule>