force-app/main/default/objects/Contact/validationRules/ECT_Not_a_Valid_Primary_Phone_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>ECT_Not_a_Valid_Primary_Phone_Number</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(ECT_Primary_Phone_Number__c))
&amp;&amp;
NOT(
    OR(
        REGEX(ECT_Primary_Phone_Number__c, &quot;(\\d{3}[-.\\s]?\\d{3}[-.\\s]?\\d{4})&quot;),
        REGEX(ECT_Primary_Phone_Number__c, &quot;(\\d{10})&quot;),  

        REGEX(ECT_Primary_Phone_Number__c, &quot;(\\(\\d{3}\\)\\s?\\d{3}-\\d{4})&quot;)
    )
)</errorConditionFormula>
    <errorDisplayField>ECT_Primary_Phone_Number__c</errorDisplayField>
    <errorMessage>Not a Valid Primary Phone Number</errorMessage>
</ValidationRule>