force-app/main/default/objects/Contact/validationRules/I_Agree.validationRule-meta.xml
<ValidationRule>
    <fullName>I_Agree</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RRS_I_Completed_Orientation__c = False, RecordType.Name = &apos;Researcher Contact&apos;)</errorConditionFormula>
    <errorDisplayField>RRS_I_Agree__c</errorDisplayField>
    <errorMessage>Must Agree</errorMessage>
</ValidationRule>