force-app/main/default/objects/Contact/validationRules/I_Completed_Orientation.validationRule-meta.xml
<ValidationRule>
    <fullName>I_Completed_Orientation</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
RRS_I_Completed_Orientation__c = False,
RecordType.Name = &apos;Researcher Contact&apos;,
(ISPICKVAL(  RRS_Status__c ,&quot;Active&quot;))
)</errorConditionFormula>
    <errorDisplayField>RRS_I_Completed_Orientation__c</errorDisplayField>
    <errorMessage>Please check &apos;I Completed Orientation&apos;</errorMessage>
</ValidationRule>