force-app/main/default/objects/Contact/validationRules/Must_provide_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_provide_end_date</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
AND(
    TEXT(RRS_Status__c) = &quot;Suspended&quot;,
    ISBLANK(RRS_End_Date__c)), True, False
)</errorConditionFormula>
    <errorDisplayField>RRS_End_Date__c</errorDisplayField>
    <errorMessage>Must provide an end date if the researcher is suspended.</errorMessage>
</ValidationRule>