force-app/main/default/objects/Contact/validationRules/Must_provide_first_name.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_provide_first_name</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(FirstName)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Please provide a first name.</errorMessage>
</ValidationRule>