force-app/main/default/objects/Contact/listViews/Active_Contacts.listView-meta.xml
<ListView>
    <fullName>Active_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>RRS_Picture_Path__c</columns>
    <columns>ID_Type__c</columns>
    <columns>ID_Number__c</columns>
    <columns>RRS_Access__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RRS_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Researcher_Contact</value>
    </filters>
    <label>Active Researcher</label>
    <sharedTo>
        <group>Registration_Assistant</group>
        <role>PullDB</role>
    </sharedTo>
</ListView>