force-app/main/default/objects/Contact/listViews/All_ECT_Contacts.listView-meta.xml
<ListView>
    <fullName>All_ECT_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ECT_Role__c</columns>
    <columns>ECT_Contact_s_State__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.ECT_Contact</value>
    </filters>
    <label>All ECT Contacts</label>
    <sharedTo>
        <group>ECT_Users</group>
    </sharedTo>
</ListView>