force-app/main/default/objects/Contact/listViews/ALL_OGIS_CONTACT.listView-meta.xml
<ListView>
    <fullName>ALL_OGIS_CONTACT</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.OGIS_Contact</value>
    </filters>
    <label>ALL OGIS CONTACTS</label>
    <sharedTo>
        <group>OGIS_Users</group>
    </sharedTo>
</ListView>