force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>ECT_Role__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
    <sharedTo>
        <group>ECRM_Admins</group>
    </sharedTo>
</ListView>