force-app/main/default/objects/Contact/listViews/Banned_Contacts.listView-meta.xml
<ListView>
    <fullName>Banned_Contacts</fullName>
    <columns>CONTACT.SALUTATION</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>RRS_Reason_For_Ban__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RRS_Status__c</field>
        <operation>equals</operation>
        <value>Banned</value>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Researcher_Contact</value>
    </filters>
    <label>Banned Researcher</label>
    <sharedTo>
        <group>Registration_Assistant</group>
    </sharedTo>
</ListView>